confusle.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: confusle-deployment
  labels:
    app: confusle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: confusle  
  template:
    metadata:
      labels:
        app: confusle
    spec:
      containers:
        - name: confusle
          image: confusleacr.azurecr.io/confusle:1.0.11
