confusle-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: confusle-svc
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: confusle  
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: confusle
